[build-system]
requires = [
    "setuptools >= 61.2",
    "setuptools_scm[toml] >= 6.2"
]
build-backend = "setuptools.build_meta"

[tool.setuptools_scm]
# Presence of this section activates setuptools_scm, even though it's empty

[project]
name = "ebrick_demo"
description = "ebrick-demo"
version = "0.0.1"
dependencies = [
    "switchboard-hw >= 0.0.39",
    "siliconcompiler >= 0.21.6",
    "umi-hw >= 0.1.0, < 0.2.0",
    "lambdalib >= 0.2.6, < 0.2.7"
]

[project.optional-dependencies]
# Test dependencies.
test = [
    "flake8 == 7.1.0",
    "tclint == 0.3.2"
]

[tool.setuptools]
include-package-data = true
packages = [
    "ebrick_demo"
]

[tool.tclint]
exclude = [
    'build/',
    'ebrick/build/'
]

[tool.tclint.style]
allow-aligned-sets = true
line-length = 80
indent = 4
max-blank-lines = 1
